construsalesman-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: construsalesman-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.nuup.ninja
      http:
        paths:
          - path: /api/vendedores
            pathType: Prefix
            backend:
              service:
                name: construsalesman-service
                port:
                  number: 80
